--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
 	<h1>The Test!</h1>
 		<p>Ohhhh baby, Git Hub, I loveee youuu! *kisses git hub gently* </p>
-
+		<p>I used <code> git push</code> to get my code to Git Hub</p>
 </body>
 </html>
